# grammar-constructive

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.bk  CMakePresets.json  auto_config.json  best configs.txt  input.txt  ksoutput.txt  output.txt  teste.klsf  teste.kp
execute/: .RData  .Rhistory  Pi10.json  Pi5.json  abs.csv  all_stats.csv  cbfs_results.csv  cbfs_stats.csv  klsfp.json  klsfp_diff.csv  klsfp_diff2.csv  klsfp_diff3.csv  klsfp_results.csv  maxcost.csv  pilot_results.csv  simple-heuristic
execute/FSSP/: .RData  .Rhistory  fssp-stats.csv  fssp.csv  fssp.json  instance_info.csv  ritt.json  ritt_fssp.csv  stats_fssp_diff.csv  stats_fssp_new.csv  stats_fssp_old.csv
execute/KLSFP/: .RData  .Rhistory  diff_stats.csv  klsfp_results.csv  klsfp_stats.csv  pilot_mod.csv  pilot_results.csv  pilot_stats.csv
scripts/: auto_config.json  configbuilder.py  getInfo.py
src/: ConstructiveAlgorithm.cpp  ConstructiveAlgorithm.h  DependentSelector.cpp  DependentSelector.h  FSSP.cpp  FSSP.h  Instance.h  KLSFP.cpp  KLSFP.h  KnapsackInstance.cpp  KnapsackInstance.h  KnapsackProblem.cpp  KnapsackProblem.h  Problem.cpp  Problem.h  SatInstance.cpp  SatInstance.h  Selector.h  StaticSelector.cpp  StaticSelector.h  config.json  parser.cpp  parser.h  simple-heuristic.cpp  simple-heuristic.h
tuning/: configbuilder.py  forbidden.txt  irace.Rdata  parameters.txt  scenario.txt  simple-heuristic  target-runner
tunning/: backup target  configbuilder.py  irace.Rdata  parameters.txt  scenario.txt  target-runner
unit-tests/: test.cpp  unit-tests.vcxproj
(+22 files in other folders)
